[package]
name = "tracing-loki-fmt"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/KoHcoJlb/tracing-loki-fmt"
authors = ["Ihor Stuzhuk"]
keywords = ["tracing", "loki"]
license = "GPL-3.0-or-later"
description = "Grafana Loki tracing layer"

[dependencies]
tokio = "1"
eyre = "0.6.12"
parking_lot = "0.12"
itertools = "0.14"

tracing = "0.1"
tracing-subscriber = "0.3"

prost = "0.13"
prost-types = "0.13"
reqwest = "0.12"
url = "2"
snap = "1"

[dev-dependencies]
eyre = "0.6.12"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[build-dependencies]
prost-build = "0.13"
